stop bad wrapping of explainer links (scss only)

--- a/app/assets/stylesheets/members/_member-show.scss
+++ b/app/assets/stylesheets/members/_member-show.scss
@@ -28,4 +28,9 @@
     padding: 0;
     margin-right: 15px;
   }
+
+  .object-data-rebellion small,
+  .object-data-attendance small {
+    white-space: nowrap;
+  }
 }
